; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_efi.c_xen_efi_reset_system.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_efi.c_xen_efi_reset_system.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHUTDOWN_reboot = common dso_local global i32 0, align 4
@SHUTDOWN_poweroff = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i64, i32*)* @xen_efi_reset_system to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_efi_reset_system(i32 %0, i32 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %16 [
    i32 130, label %10
    i32 128, label %10
    i32 129, label %13
  ]

10:                                               ; preds = %4, %4
  %11 = load i32, i32* @SHUTDOWN_reboot, align 4
  %12 = call i32 @xen_reboot(i32 %11)
  br label %18

13:                                               ; preds = %4
  %14 = load i32, i32* @SHUTDOWN_poweroff, align 4
  %15 = call i32 @xen_reboot(i32 %14)
  br label %18

16:                                               ; preds = %4
  %17 = call i32 (...) @BUG()
  br label %18

18:                                               ; preds = %16, %13, %10
  ret void
}

declare dso_local i32 @xen_reboot(i32) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
